--- a/index.html
+++ b/index.html
@@ -3,61 +3,63 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>POLER OYUNCAK – Yakında Hizmetinizdeyiz</title>
+  <title>POLER OYUNCAK – Yakında</title>
   <meta name="description" content="POLER OYUNCAK – Çok yakında yayındayız." />
   <link rel="icon" href="/favicon.ico" />
   <style>
     :root {
       --bg: #ffffff;
-      --fg: #0f172a; /* slate-900 */
-      --accent: #0b3d91; /* kurumsal lacivert ton */
+      --fg: #0f172a;          /* koyu gri metin */
+      --accent: #0b3d91;      /* kurumsal mavi */
+      --muted: #64748b;       /* ikincil metin */
+      --border: rgba(15,23,42,.06);
     }
     *, *::before, *::after { box-sizing: border-box; }
     html, body { height: 100%; }
     body {
-      margin: 0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      margin: 0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       background: var(--bg); color: var(--fg);
       display: grid; place-items: center; padding: 24px;
     }
-    .wrap { text-align: center; max-width: 720px; width: 100%; }
-    .card {
-      border: 1px solid rgba(15,23,42,.08);
-      border-radius: 20px; padding: 40px 28px;
-      box-shadow: 0 8px 30px rgba(2,8,23,.06);
+    .wrap { text-align: center; max-width: 780px; width: 100%; }
+    .block { padding: 28px 12px; }
+
+    .logo { display: inline-flex; flex-direction: column; align-items: center; gap: 12px; }
+    .logo img {
+      height: clamp(120px, 22vw, 180px); width: auto; display: block;
+      opacity: 0; animation: fadeInGlow 2.2s ease-out forwards; filter: brightness(0.75);
     }
-    .logo {
-      display: inline-flex; align-items: center; gap: 14px; margin-bottom: 22px;
+    @keyframes fadeInGlow {
+      0%   { opacity: 0;   filter: brightness(0.65) blur(2px); transform: scale(.98); }
+      60%  { opacity: 0.9; filter: brightness(1.15); }
+      100% { opacity: 1;   filter: brightness(1);    transform: scale(1); }
     }
-    .logo img { height: 56px; width: auto; display: block; }
-    .wordmark { font-weight: 800; letter-spacing: .03em; font-size: clamp(22px, 4vw, 32px); color: var(--accent); }
-    .tagline { margin-top: 8px; font-size: 14px; color: #475569; }
+
     h1 {
-      margin: 16px 0 0; font-size: clamp(28px, 6vw, 40px); line-height: 1.1;
+      margin: 18px 0 6px; font-weight: 800;
+      font-size: clamp(28px, 6.5vw, 44px); line-height: 1.1;
+      letter-spacing: .01em;
+      color: #111827;
     }
-    .sub { margin-top: 8px; font-size: clamp(14px, 2.2vw, 16px); color: #64748b; }
-    footer { margin-top: 24px; font-size: 12px; color: #94a3b8; }
-    .sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0; }
+    .sub { margin-top: 6px; font-size: clamp(14px, 2.3vw, 16px); color: var(--muted); }
+    footer { margin-top: 22px; font-size: 12px; color: #94a3b8; }
+
     @media (prefers-color-scheme: dark) {
-      :root { --bg: #0b1220; --fg: #e5e7eb; }
-      .card { border-color: rgba(226,232,240,.08); box-shadow: 0 10px 35px rgba(0,0,0,.35); }
-      .tagline { color: #a5b4fc; }
-      .sub { color: #cbd5e1; }
+      :root { --bg: #0b1220; --fg: #e5e7eb; --muted:#cbd5e1; }
+      h1 { color:#e5e7eb; }
       footer { color: #94a3b8; }
     }
   </style>
 </head>
 <body>
   <main class="wrap">
-    <section class="card" aria-labelledby="headline">
-      <!-- LOGO YERİ: Aşağıdaki <img> kaynağını kendi logo dosyanızla değiştirin (ör. /assets/logo.svg).  
-           Eğer henüz logonuz yoksa, yalnızca metin wordmark kullanılacaktır. -->
+    <section class="block" aria-labelledby="headline">
       <div class="logo">
-        <img src="/assets/logo.svg" alt="POLER OYUNCAK Logosu" onerror="this.style.display='none'" />
-        <span class="wordmark">POLER OYUNCAK</span>
+        <img src="/assets/logo.png" alt="POLER OYUNCAK Logosu" />
       </div>
 
       <h1 id="headline">YAKINDA HİZMETİNİZDEYİZ</h1>
-      <p class="sub">Yeni web sitemizi hazırlıyoruz. Çok yakında buradayız.</p>
+      <p class="sub" id="sub">Yeni web sitemizi hazırlıyoruz. Çok yakında buradayız.</p>
 
       <footer>
         © <span id="y"></span> POLER OYUNCAK • Tüm hakları saklıdır.
@@ -66,8 +68,39 @@
   </main>
 
   <script>
-    // Yıl otomatik
     document.getElementById('y').textContent = new Date().getFullYear();
+
+    const headline = document.getElementById('headline');
+    const sub = document.getElementById('sub');
+
+    const params = new URLSearchParams(location.search);
+    const forced = (params.get('lang') || '').toLowerCase();
+    const nav = (navigator.language || navigator.userLanguage || 'tr').toLowerCase();
+
+    const map = {
+      'tr': { h: 'YAKINDA HİZMETİNİZDEYİZ', s: 'Yeni web sitemizi hazırlıyoruz. Çok yakında buradayız.' },
+      'en': { h: 'COMING SOON',              s: 'We are preparing our new website. See you soon.' },
+      'ru': { h: 'СКОРО МЫ БУДЕМ С ВАМИ',    s: 'Мы готовим наш новый сайт. Совсем скоро будем на связи.' },
+      'zh': { h: '即将为您服务',               s: '我们正在准备新网站，敬请期待。' },
+      'zh-cn': { h: '即将为您服务',            s: '我们正在准备新网站，敬请期待。' },
+      'zh-tw': { h: '即將為您服務',            s: '我們正在準備新網站，敬請期待。' },
+      'ar': { h: 'قريباً في خدمتكم',         s: 'نحن نقوم بإعداد موقعنا الجديد. ترقبونا قريباً.' },
+      'de': { h: 'WIR SIND BALD FÜR SIE DA',  s: 'Unsere neue Website wird bald verfügbar sein.' }
+    };
+
+    function pickLocale(code){
+      if(!code) return 'tr';
+      code = code.toLowerCase();
+      if(map[code]) return code;
+      const base = code.split('-')[0];
+      if(map[base]) return base;
+      if(code.startsWith('zh')) return 'zh';
+      return 'tr';
+    }
+
+    const chosen = pickLocale(forced || nav);
+    headline.textContent = map[chosen].h;
+    sub.textContent = map[chosen].s;
   </script>
 </body>
 </html>
