--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <main class="wrap">
     <section class="block" aria-labelledby="headline">
       <div class="logo">
-        <img src="/assets/logo.png" alt="POLER OYUNCAK Logosu" />
+        <img src="/assets/logso.png" alt="POLER OYUNCAK Logosu" />
       </div>
 
       <h1 id="headline">YAKINDA HİZMETİNİZDEYİZ</h1>
