--- a/buying/index.html
+++ b/buying/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#0ea5e9" />
   <style>
     :root { --bg:#0b1220; --fg:#eaf2ff; --muted:#9fb3c8; --brand:#0ea5e9; }
-    *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.4 system-ui, -apple-system, Segoe UI, Roboto, sans-serif}
+    *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.4 system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
     header{padding:16px 20px;border-bottom:1px solid rgba(255,255,255,.08);display:flex;gap:8px;align-items:center}
     header h1{margin:0;font-size:18px;font-weight:700}
     main{max-width:960px;margin:0 auto;padding:16px}
@@ -23,7 +23,7 @@
     textarea{min-height:92px;resize:vertical}
     .hint{color:var(--muted);font-size:13px}
     .ok{color:#22c55e}.warn{color:#f59e0b}.err{color:#ef4444}
-    .mono{font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;font-size:12px}
+    .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;font-size:12px}
   </style>
 </head>
 <body>
@@ -31,6 +31,7 @@
     <h1>Poler Oyuncak • Kartvizit Tara</h1>
     <span class="hint">/buying</span>
   </header>
+
   <main>
     <div class="grid">
       <!-- Kamera & Çekim -->
@@ -69,7 +70,7 @@
         <div class="row" style="gap:12px;margin-top:8px">
           <div style="flex:1">
             <label for="email">E-posta</label>
-            <input id="email" placeholder="info@..."/>
+            <input id="email" placeholder="info@..." />
           </div>
           <div style="flex:1">
             <label for="address">Adres</label>
@@ -87,53 +88,30 @@
           <summary class="hint">OCR ham metni göster</summary>
           <pre id="rawText" class="mono" style="white-space:pre-wrap"></pre>
         </details>
-
-        <details style="margin-top:12px">
-          <summary class="hint">Firebase yapılandırması (gerekli)</summary>
-          <pre class="mono">
-1) <a href="https://console.firebase.google.com" target="_blank" rel="noopener">Firebase Console</a> → proje oluştur → Web app ekle.
-2) Aşağıdaki config'i doldur.
-3) Firestore Rules:
-service cloud.firestore {
-  match /databases/{db}/documents {
-    match /companies/{id} {
-      allow read, update, delete: if request.auth!=null && request.auth.uid==resource.data.owner;
-      allow create: if request.auth!=null && request.resource.data.owner==request.auth.uid;
-    }
-  }
-}
-4) Storage Rules:
-service firebase.storage {
-  match /b/{bucket}/o {
-    match /cards/{ownerId}/{allPaths=**} {
-      allow read, write: if request.auth!=null && request.auth.uid==ownerId;
-    }
-  }
-}
-          </pre>
-        </details>
       </section>
     </div>
   </main>
 
   <!-- Tesseract.js (OCR) -->
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
-  <!-- Firebase -->
+  <!-- Firebase (compat SDK'ler – vanilla JS için basit) -->
   <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-storage-compat.js"></script>
 
   <script>
-  // ------------------ Firebase Config (DOLDUR) ------------------
+  // --------- Firebase Config (senin uygulamandan) ----------
   const firebaseConfig = {
-    apiKey:     "PASTE_ME",
-    authDomain: "PASTE_ME.firebaseapp.com",
-    projectId:  "PASTE_ME",
-    storageBucket: "PASTE_ME.appspot.com",
-    appId:      "PASTE_ME",
+    apiKey: "AIzaSyD4MPM2fvkTXeOWG12g-wV_s3eG4SkBWS0",
+    authDomain: "poleroyuncak.firebaseapp.com",
+    projectId: "poleroyuncak",
+    storageBucket: "poleroyuncak.appspot.com",
+    messagingSenderId: "473844630811",
+    appId: "1:473844630811:web:721ebd8a9b6f085da03fbe",
+    measurementId: "G-JNQTNX3EC4"
   };
-  // --------------------------------------------------------------
+  // ---------------------------------------------------------
 
   let app, auth, db, storage, uid = null;
   try {
@@ -162,7 +140,6 @@ service firebase.storage {
   const camLog = document.getElementById('camLog');
   const rawText = document.getElementById('rawText');
   const saveMsg = document.getElementById('saveMsg');
-
   const $ = (id) => document.getElementById(id);
   const fields = { name: $('name'), phone: $('phone'), email: $('email'), address: $('address') };
 
@@ -221,16 +198,11 @@ service firebase.storage {
 
   // Basit alan çıkarımı (TR ağırlıklı)
   function extractFields(text) {
-    // E-posta
     const email = (text.match(/[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,}/i)||[])[0]||"";
-    // Telefon (TR mobil/alan kodlarıyla gevşek)
     const tel = (text.match(/(\+?90[\s\-]?)?0?\s?5\d{2}[\s\-]?\d{3}[\s\-]?\d{2}[\s\-]?\d{2}|(\+?90[\s\-]?)?\(?\d{3}\)?[\s\-]?\d{3}[\s\-]?\d{2}[\s\-]?\d{2}/)||[])[0]||"";
-    // Adres ipuçları
     const lines = text.split(/\r?\n/).map(s=>s.trim()).filter(Boolean);
-    const addrLine = lines.find(l => /mah\.|mh\.|cad\.|cd\.|sok\.|sk\.|no[:\s]|ilçe|istanbul|ankara|izmir|bursa|koçaeli|antalya|adana|konya|gaziantep|kayseri|mersin|eskişehir/i.test(l)) || "";
-    // Şirket adı heuristiği: üst satırlardan, rakam içermeyen kısa satır
+    const addrLine = lines.find(l => /mah\.|mh\.|cad\.|cd\.|sok\.|sk\.|no[:\s]|ilçe|istanbul|ankara|izmir|bursa|kocaeli|antalya|adana|konya|gaziantep|kayseri|mersin|eskişehir/i.test(l)) || "";
     const nameCand = lines.slice(0,5).find(l => !/\d/.test(l) && l.length<=32) || lines[0] || "";
-
     return { name: nameCand, phone: tel, email: email, address: addrLine };
   }
 
@@ -252,7 +224,7 @@ service firebase.storage {
       btnSave.disabled = false;
       camLog.innerHTML = `OCR tamam: <span class="ok">alanlar dolduruldu</span>`;
     } catch (e) {
-      camLog.innerHTML = `OCR hata: <span class="err">${e.message}</span>`;
+      camLog.innerHTML = `OCR hata: <span class="err">` + e.message + `</span>`;
     } finally {
       btnOcr.textContent = "OCR ile Doldur";
       btnOcr.disabled = false;
@@ -287,7 +259,6 @@ service firebase.storage {
       };
       await db.collection('companies').add(doc);
       saveMsg.innerHTML = '<span class="ok">Kaydedildi ✅</span>';
-      // formu temizle
       Object.values(fields).forEach(i => i.value = "");
       rawText.textContent = "";
     } catch (e) {
@@ -297,7 +268,7 @@ service firebase.storage {
     }
   };
 
-  // iOS ipuçları
+  // Tarayıcı desteği kontrolü
   if (!('mediaDevices' in navigator && 'getUserMedia' in navigator.mediaDevices)) {
     camLog.innerHTML = '<span class="err">Tarayıcı kamera API’sını desteklemiyor.</span>';
   }
